--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   },
   "dependencies": {
     "axios": "1.7.9",
-    "bcryptjs": "2.4.3",
-    "cors": "2.8.5",
-    "dotenv": "16.4.7",
-    "express": "4.21.2",
-    "jsonwebtoken": "9.0.2",
-    "mongodb": "6.12.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "8.9.3",
-    "ws": "8.16.0"
+    "path": "^0.12.7",
+    "stripe": "^17.5.0",
+    "ws": "^8.18.0"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.x"
   }
 }
