--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "dev": "nodemon api.js"
   },
   "dependencies": {
-    "axios": "1.7.9",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "mongoose": "8.9.3",
+    "mongoose": "^8.9.3",
     "path": "^0.12.7",
     "stripe": "^17.5.0",
+    "tailwindcss": "^3.4.1",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=16.x"
