--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "amqplib": "0.10.3",
     "async-lock": "^1.4.1",
     "aws-sdk": "2.1531.0",
+    "axios": "^1.8.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.20.3",
     "bull": "4.12.0",
@@ -75,6 +76,7 @@
     "cookie": "0.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cron": "^4.1.0",
     "crypto": "^1.0.1",
     "crypto-js": "4.2.0",
     "datadog-metrics": "0.11.0",
@@ -98,11 +100,12 @@
     "mathjs": "12.3.0",
     "ml-matrix": "6.11.0",
     "ml-regression": "5.0.0",
-    "mongodb": "^6.14.0",
+    "mongodb": "^6.14.2",
     "mongoose": "^8.10.1",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
     "node-schedule": "2.1.1",
     "nodemailer": "6.10.0",
     "opossum": "^8.4.0",
