Replace all files with new version

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "url": "https://github.com/FlowDynamics828/Sports-Analytics.git"
   },
   "scripts": {
-    "start": "node startup.js",
-    "dev": "nodemon startup.js",
-    "dev:debug": "nodemon --inspect startup.js",
-    "prod": "NODE_ENV=production node startup.js",
-    "prod:cluster": "NODE_ENV=production node startup.js --cluster",
+    "start": "node scripts/startup.js",
+    "dev": "nodemon scripts/startup.js",
+    "dev:debug": "nodemon --inspect scripts/startup.js",
+    "prod": "NODE_ENV=production node scripts/startup.js",
+    "prod:cluster": "NODE_ENV=production node scripts/startup.js --cluster",
     "start:direct": "node api.js",
     "dev:direct": "nodemon api.js",
     "test": "jest --coverage",
@@ -46,37 +46,72 @@
     "fix:memory": "node scripts/fix-memory-issues.js",
     "fix:maxlisteners": "node scripts/fix-max-listeners.js",
     "fix:all": "node scripts/fix-all-issues.js",
-    "verify:all": "node scripts/verify-python-env.js && node test-mongodb-connection.js",
+    "verify:all": "node scripts/verify-python-env.js && node test-mongodb-connection.js && node scripts/quick-diagnose.js",
     "diagnose": "node scripts/quick-diagnose.js",
     "diagnose:full": "node scripts/diagnose-system-fixed.js",
     "fix": "node scripts/fix-all-issues.js",
     "fix:quick": "node scripts/fix-python-path.js",
     "setup": "node scripts/fix-all-issues.js && npm run start:optimized",
-    "optimize:memory": "node scripts/memoryManager.js",
-    "start:optimized": "node --max-old-space-size=4096 --expose-gc startup.js",
-    "fix:python-verification": "node scripts/fix-python-timeout.js"
+    "optimize:memory": "node scripts/optimize-memory.js",
+    "start:optimized": "node --max-old-space-size=4096 --expose-gc scripts/startup.js",
+    "fix:python-verification": "node scripts/fix-python-timeout.js",
+    "start:emergency": "node --max-old-space-size=8192 --expose-gc --trace-warnings --trace-deprecation scripts/startup.js",
+    "db:verify": "node test-mongodb-connection.js",
+    "db:fix": "node scripts/fix-mongodb-connection.js",
+    "fix:mongodb": "node scripts/fix-mongodb-connection.js",
+    "fix:websocket": "node scripts/fix-websocket-server.js",
+    "verify:websocket": "node scripts/verify-websocket.js",
+    "ws:test": "node tests/websocket-test.js",
+    "ws:debug": "node --inspect tests/websocket-debug.js",
+    "clear:logs": "rm -f logs/*.log || echo 'No logs to clear'",
+    "clear:cache": "rm -rf .cache || echo 'No cache to clear'",
+    "build": "npm run build:frontend && npm run verify:all",
+    "build:frontend": "mkdir -p public && cp -r frontend/build/* public/ || echo 'No frontend build available'",
+    "deploy": "NODE_ENV=production npm run build && npm run start:optimized",
+    "deploy:cluster": "NODE_ENV=production npm run build && npm run prod:cluster",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@elastic/elasticsearch": "8.11.0",
     "@google-cloud/storage": "7.7.0",
+    "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.27.0",
+    "@opentelemetry/instrumentation": "^0.57.2",
+    "@opentelemetry/instrumentation-express": "^0.47.1",
+    "@opentelemetry/instrumentation-http": "^0.57.2",
+    "@opentelemetry/instrumentation-ioredis": "^0.47.1",
+    "@opentelemetry/instrumentation-mongodb": "^0.52.0",
+    "@opentelemetry/resources": "^1.21.0",
+    "@opentelemetry/sdk-trace-base": "^1.30.1",
+    "@opentelemetry/sdk-trace-node": "^1.21.0",
+    "@opentelemetry/semantic-conventions": "^1.21.0",
     "@sentry/node": "7.91.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "amqplib": "0.10.3",
     "async-lock": "^1.4.1",
     "aws-sdk": "2.1531.0",
     "axios": "^1.8.2",
-    "bcryptjs": "2.4.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.20.3",
     "bull": "4.12.0",
     "cache-manager": "^5.7.6",
     "cache-manager-ioredis": "^2.1.0",
     "cluster": "^0.7.7",
+    "colors": "^1.4.0",
     "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
-    "connect-redis": "7.1.0",
+    "connect-redis": "^7.1.1",
     "cookie": "0.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cron": "^4.1.0",
+    "cross-spawn": "^7.0.6",
     "crypto": "^1.0.1",
     "crypto-js": "4.2.0",
     "datadog-metrics": "0.11.0",
@@ -87,14 +122,14 @@
     "express-async-handler": "1.2.0",
     "express-mongo-sanitize": "2.2.0",
     "express-rate-limit": "^7.1.5",
-    "express-session": "^1.18.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
     "fast-csv": "5.0.0",
     "helmet": "^7.1.0",
     "helmet-csp": "3.4.0",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.0",
     "joi": "17.11.0",
-    "jsonwebtoken": "9.0.2",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "2.2.4",
     "lodash": "^4.17.21",
     "mathjs": "12.3.0",
@@ -106,6 +141,7 @@
     "multer": "1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "node-schedule": "2.1.1",
     "nodemailer": "6.10.0",
     "opossum": "^8.4.0",
@@ -117,7 +153,7 @@
     "prom-client": "^15.1.3",
     "python-shell": "^5.0.0",
     "rate-limit-mongo": "2.3.2",
-    "redis": "4.6.11",
+    "redis": "^4.6.11",
     "safe-buffer": "5.2.1",
     "scikit-learn": "0.1.0",
     "send": "0.19.0",
@@ -128,7 +164,7 @@
     "stripe": "14.9.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.0",
-    "uuid": "9.0.1",
+    "uuid": "^9.0.1",
     "v8": "^0.1.0",
     "validator": "13.11.0",
     "winston": "^3.17.0",
@@ -144,6 +180,7 @@
     "@babel/plugin-transform-runtime": "7.23.6",
     "@babel/preset-env": "7.23.6",
     "@babel/runtime": "7.23.6",
+    "@types/cross-spawn": "^6.0.6",
     "artillery": "2.0.3",
     "chai": "4.3.10",
     "cross-env": "7.0.3",
