--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-numpy==1.22.4
-pandas==1.4.2
-scikit-learn==1.1.1
-xgboost==1.6.1
-lightgbm==3.3.2
-pymongo==4.1.1
-redis==4.3.4
-python-dotenv==0.20.0
-psutil==5.9.1
-prometheus-client==0.14.1
-hyperopt==0.2.7
-cachetools==5.2.0
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.2.0
+xgboost>=1.7.0
+lightgbm>=3.3.0
+requests>=2.28.0
+pymongo>=4.3.0
+python-dotenv>=0.21.0
+redis>=4.4.0
+prometheus_client>=0.16.0
+psutil>=5.9.0
+cachetools>=5.3.0
+hyperopt>=0.2.7
